# lz4rip

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  README.md  SAFETY.md  SECURITY.md
.github/workflows/: jsr.yml  rust.yml
benches/: binggan_bench.rs  plot_bench.py  profile_compress.rs  profile_compress_c.rs  profile_decompress.rs  profile_decompress_c.rs
corpus/: legacy_1k.lz4
crates/core/: Cargo.toml  README.md
crates/core/src/: fastcpy.rs  lib.rs  sink.rs
crates/decode/: Cargo.toml  README.md
crates/decode/src/: decompress.rs  lib.rs  primitives.rs
crates/encode/: Cargo.toml  README.md
crates/encode/src/: compress.rs  compressor.rs  dict.rs  hashtable.rs  lib.rs  verified_sink.rs
doc/charts/aarch64/: bench_results2.json
examples/: lz4rip_bench.rs  quickstart.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compress_bitflip.rs  fuzz_craft_tokens.rs  fuzz_decomp_corrupt_block.rs  fuzz_decomp_corrupt_frame.rs  fuzz_decomp_no_output_leak.rs  fuzz_roundtrip.rs  fuzz_roundtrip_cpp_compress.rs  fuzz_roundtrip_cpp_decompress.rs  fuzz_roundtrip_dict.rs  fuzz_roundtrip_frame.rs  fuzz_roundtrip_frame_dict.rs  fuzz_roundtrip_tiny_tables.rs
jsr/: LICENSE  README.md  build.sh  deno.json
jsr/src/: mod.ts  mod_test.ts
jsr/src/pkg/: lz4rip.wasm  lz4rip_wasm.d.ts  lz4rip_wasm.js  lz4rip_wasm_bg.wasm.d.ts
jsr/wasm/: Cargo.toml
jsr/wasm/src/: lib.rs
src/: fastcpy.rs  lib.rs  sink.rs  verified_sink.rs
src/block/: compress.rs  decompress.rs  dict.rs  hashtable.rs  mod.rs
src/frame/: compress.rs  decompress.rs  header.rs  mod.rs
tests/: api.rs  compression_ratio.rs  cpp_compat.rs  decompress_errors.rs  dict.rs  frame.rs  roundtrip.rs  tests.rs
tests/common/: mod.rs
