[package]
name = "lz4rip-core"
description = "Shared types and constants for lz4rip encode/decode crates."
version = "0.5.4"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/paddor/lz4rip"
readme = "README.md"

[features]
default = ["std"]
std = []
nightly = []
# Core is already `#![forbid(unsafe_code)]`; this flag exists only to propagate
# from the facade and encode/decode crates.
paranoid = []

[dev-dependencies]
proptest = "1.0.0"
