[package]
name = "lz4rip-decode"
description = "LZ4 block decompression for lz4rip."
version = "0.8.2"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/paddor/lz4rip"
readme = "README.md"

[features]
default = ["std"]
alloc = []
std = ["alloc", "lz4rip-core/std"]
nightly = ["lz4rip-core/nightly"]

[dependencies]
lz4rip-core = { version = "0.5.0", path = "../core", default-features = false }
