[package]
name = "lz4rip-decode"
description = "LZ4 block decompression for lz4rip."
version = "0.10.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/paddor/lz4rip"
readme = "README.md"

[features]
default = ["std"]
alloc = []
std = ["alloc", "lz4rip-core/std"]
nightly = ["lz4rip-core/nightly"]
# Pure safe Rust: forbid all unsafe, swap unchecked ops for safe twins.
paranoid = ["lz4rip-core/paranoid"]

[dependencies]
lz4rip-core = { version = "0.5.4", path = "../core", default-features = false }
