[package]
name = "lz4rip-encode"
description = "LZ4 block compression for lz4rip."
version = "0.5.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/paddor/lz4rip"

[features]
default = ["std"]
std = ["lz4rip-core/std"]
nightly = ["lz4rip-core/nightly"]

[dependencies]
lz4rip-core = { version = "0.5.0", path = "../core", default-features = false }
