[package]
name = "lz4rip-encode"
description = "LZ4 block compression for lz4rip."
version = "0.9.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/paddor/lz4rip"
readme = "README.md"

[features]
default = ["std"]
alloc = []
std = ["alloc", "lz4rip-core/std"]
nightly = ["lz4rip-core/nightly"]
# Pure safe Rust: forbid all unsafe, swap unchecked ops for safe twins.
paranoid = ["lz4rip-core/paranoid"]

[dependencies]
lz4rip-core = { version = "0.5.0", path = "../core", default-features = false }
