[workspace]

[package]
name = "lz4rip-wasm"
version = "0.2.3"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lz4rip = { path = "../..", default-features = false, features = ["alloc"] }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
